--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+Wednesday
+===
+
+Most of what happened today is in Tail.hs and Wednesday-interaction.txt
+
+Tuesday
+===
+
 Please have a look in Wc.hs, it's most of what we talked about on Tuesday.
 
 There's some auxillary code in Points.hs, Sqrt.hs, and Stuff.hs.
